force-app/main/default/objects/Revenue_Target__c/Revenue_Target__c.object-meta.xml
<CustomObject>
    <label>Revenue Target</label>
    <nameField>
        <label>Revenue Target Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Revenue Targets</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>