force-app/main/default/objects/Revenue_Target__c/fields/Account_del__c.field-meta.xml
<CustomField>
    <fullName>Account_del__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Revenue Targets</relationshipLabel>
    <relationshipName>Revenue_Targets_del</relationshipName>
    <type>Lookup</type>
</CustomField>