force-app/main/default/objects/Revenue_Target__c/fields/Field_of_Play_del__c.field-meta.xml
<CustomField>
    <fullName>Field_of_Play_del__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Field of Play</label>
    <referenceTo>Field_of_Play__c</referenceTo>
    <relationshipLabel>Revenue Targets</relationshipLabel>
    <relationshipName>Revenue_Targets_del</relationshipName>
    <type>Lookup</type>
</CustomField>