force-app/main/default/objects/Revenue_Target__c/fields/High__c.field-meta.xml
<CustomField>
    <fullName>High__c</fullName>
    <label>High</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>