force-app/main/default/objects/Revenue_Target__c/fields/Low__c.field-meta.xml
<CustomField>
    <fullName>Low__c</fullName>
    <label>Low</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>