force-app/main/default/objects/Revenue_Target__c/fields/Realistic__c.field-meta.xml
<CustomField>
    <fullName>Realistic__c</fullName>
    <label>Realistic</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>