force-app/main/default/objects/Revenue_Target__c/fields/TargetID__c.field-meta.xml
<CustomField>
    <fullName>TargetID__c</fullName>
    <label>TargetID</label>
    <length>54</length>
    <type>Text</type>
</CustomField>